# Kayak

./: ADMIN_AUTHENTICATION_COMPLETE.md  AI_CHATBOT_IMPLEMENTATION.md  DEFAULT_TEST_DATA.md  E2E_TESTING_GUIDE.md  Makefile  PORT_DETAILS.md  PROJECT_STATUS_SUMMARY.md  QUICK_START.md  QUICK_STATUS_CHECKLIST.md  README.md  READY_FOR_TESTING.md  TRACKING_SERVICE_README.md  start-all.sh  stop-all.sh
ai-recommendation/: DATASET_INTEGRATION.md  README.md  ai_recommendations.db  pyproject.toml  requirements.txt
ai-recommendation/app/: __init__.py  main.py
ai-recommendation/app/api/: __init__.py  bundles.py  chat.py  health.py  watches.py
ai-recommendation/app/data/: __init__.py  csv_processor.py  dataset_loader.py  price_history.py
ai-recommendation/app/db/: session.py
ai-recommendation/app/deals_agent/: __init__.py  csv_producer.py  deal_detector.py  ingestion_worker.py  offer_tagger.py
ai-recommendation/app/kafka/: __init__.py  consumer.py  producer.py
ai-recommendation/app/models/: __init__.py  bundle.py  flight_deal.py  hotel_deal.py  watch.py
ai-recommendation/app/schemas/: __init__.py  bundle_schemas.py  chat_schemas.py  watch_schemas.py
ai-recommendation/app/services/: __init__.py  chat_context.py  concierge_agent.py  deal_selector.py  nlu_parser.py
ai-recommendation/app/websocket/: __init__.py  events.py
docs/: ADMIN_CREATION_QUICK.md  ADMIN_MODULE_GUIDE.md  ADMIN_TESTING_GUIDE.md  CREATE_ADMIN_GUIDE.md  DATABASE_SCHEMA.md  ENVIRONMENT_SETUP.md  FRONTEND_COMPLETE_STATUS.md  Kafka-Kayak-Streaming-README.md  MAKEFILE_GUIDE.md  NEXT_STEPS_PLAN.md  (+6 more)
(+237 files in other folders)
