[tool.poetry]
name = "ai-recommendation"
version = "1.0.0"
description = "AI Recommendation Service for Kayak Travel Booking System"
authors = ["Kayak Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
sqlmodel = "^0.0.14"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
kafka-python = "^2.0.2"
aiokafka = "^0.10.0"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

